--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dayjs": "^1.11.12",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5"
   },
